SLangParser.py
# Generated from SLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SLangParser ( Parser ):

    grammarFileName = "SLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'?'", "':'", "<INVALID>", "<INVALID>", 
                     "'var'", "'print'", "'if'", "'else'", "'while'", "'for'", 
                     "'in'", "'true'", "'false'", "'break'", "'int'", "'float'", 
                     "'boolean'", "'string'", "'array'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'&&'", "'||'", "'!'", "'('", "')'", "'['", 
                     "']'", "','", "';'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "WS", "COMMENT", 
                      "VAR", "PRINT", "IF", "ELSE", "WHILE", "FOR", "IN", 
                      "TRUE", "FALSE", "BREAK", "INT", "FLOAT", "BOOLEAN", 
                      "STRING", "ARRAY", "INTEGER", "FLOATING_POINT", "STRING_LITERAL", 
                      "IDENTIFIER", "ASSIGN", "PLUS", "MINUS", "MULT", "DIV", 
                      "MOD", "EQUAL", "NOT_EQUAL", "LESS_THAN", "LESS_THAN_OR_EQUAL", 
                      "GREATER_THAN", "GREATER_THAN_OR_EQUAL", "AND", "OR", 
                      "NOT", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
                      "COMMA", "SEMI", "LBRACE", "RBRACE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_breakStatement = 3
    RULE_variableDeclaration = 4
    RULE_assignmentStatement = 5
    RULE_printStatement = 6
    RULE_ifStatement = 7
    RULE_whileStatement = 8
    RULE_forLoop = 9
    RULE_expressionStatement = 10
    RULE_expression = 11
    RULE_conditionalExpression = 12
    RULE_logicalOrExpression = 13
    RULE_logicalAndExpression = 14
    RULE_equalityExpression = 15
    RULE_relationalExpression = 16
    RULE_additiveExpression = 17
    RULE_multiplicativeExpression = 18
    RULE_unaryExpression = 19
    RULE_primaryExpression = 20
    RULE_arrayLiteral = 21
    RULE_functionCall = 22
    RULE_literal = 23
    RULE_typeType = 24

    ruleNames =  [ "program", "statement", "block", "breakStatement", "variableDeclaration", 
                   "assignmentStatement", "printStatement", "ifStatement", 
                   "whileStatement", "forLoop", "expressionStatement", "expression", 
                   "conditionalExpression", "logicalOrExpression", "logicalAndExpression", 
                   "equalityExpression", "relationalExpression", "additiveExpression", 
                   "multiplicativeExpression", "unaryExpression", "primaryExpression", 
                   "arrayLiteral", "functionCall", "literal", "typeType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    WS=3
    COMMENT=4
    VAR=5
    PRINT=6
    IF=7
    ELSE=8
    WHILE=9
    FOR=10
    IN=11
    TRUE=12
    FALSE=13
    BREAK=14
    INT=15
    FLOAT=16
    BOOLEAN=17
    STRING=18
    ARRAY=19
    INTEGER=20
    FLOATING_POINT=21
    STRING_LITERAL=22
    IDENTIFIER=23
    ASSIGN=24
    PLUS=25
    MINUS=26
    MULT=27
    DIV=28
    MOD=29
    EQUAL=30
    NOT_EQUAL=31
    LESS_THAN=32
    LESS_THAN_OR_EQUAL=33
    GREATER_THAN=34
    GREATER_THAN_OR_EQUAL=35
    AND=36
    OR=37
    NOT=38
    LPAREN=39
    RPAREN=40
    LBRACKET=41
    RBRACKET=42
    COMMA=43
    SEMI=44
    LBRACE=45
    RBRACE=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SLangParser.StatementContext,i)


        def getRuleIndex(self):
            return SLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 50
                self.statement()
                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3023773398752) != 0)):
                    break

            self.state = 55
            self.match(SLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(SLangParser.VariableDeclarationContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(SLangParser.AssignmentStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(SLangParser.PrintStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SLangParser.IfStatementContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(SLangParser.ForLoopContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(SLangParser.WhileStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(SLangParser.BreakStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(SLangParser.ExpressionStatementContext,0)


        def getRuleIndex(self):
            return SLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.assignmentStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.printStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.ifStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 61
                self.forLoop()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 62
                self.whileStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 63
                self.breakStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 64
                self.expressionStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(SLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SLangParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SLangParser.StatementContext,i)


        def getRuleIndex(self):
            return SLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(SLangParser.LBRACE)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3023773398752) != 0):
                self.state = 68
                self.statement()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(SLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(SLangParser.BREAK, 0)

        def getRuleIndex(self):
            return SLangParser.RULE_breakStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStatement" ):
                listener.enterBreakStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStatement" ):
                listener.exitBreakStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStatement" ):
                return visitor.visitBreakStatement(self)
            else:
                return visitor.visitChildren(self)




    def breakStatement(self):

        localctx = SLangParser.BreakStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_breakStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(SLangParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(SLangParser.VAR, 0)

        def typeType(self):
            return self.getTypedRuleContext(SLangParser.TypeTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(SLangParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(SLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SLangParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = SLangParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(SLangParser.VAR)
            self.state = 79
            self.typeType()
            self.state = 80
            self.match(SLangParser.IDENTIFIER)
            self.state = 81
            self.match(SLangParser.ASSIGN)
            self.state = 82
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SLangParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(SLangParser.ASSIGN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SLangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SLangParser.ExpressionContext,i)


        def LBRACKET(self):
            return self.getToken(SLangParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(SLangParser.RBRACKET, 0)

        def getRuleIndex(self):
            return SLangParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = SLangParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignmentStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(SLangParser.IDENTIFIER)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==41:
                self.state = 85
                self.match(SLangParser.LBRACKET)
                self.state = 86
                self.expression()
                self.state = 87
                self.match(SLangParser.RBRACKET)


            self.state = 91
            self.match(SLangParser.ASSIGN)
            self.state = 92
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(SLangParser.PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(SLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SLangParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)




    def printStatement(self):

        localctx = SLangParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(SLangParser.PRINT)
            self.state = 95
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SLangParser.IF, 0)

        def LPAREN(self):
            return self.getToken(SLangParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SLangParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(SLangParser.RPAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(SLangParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(SLangParser.ELSE, 0)

        def getRuleIndex(self):
            return SLangParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = SLangParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(SLangParser.IF)
            self.state = 98
            self.match(SLangParser.LPAREN)
            self.state = 99
            self.expression()
            self.state = 100
            self.match(SLangParser.RPAREN)
            self.state = 101
            self.block()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 102
                self.match(SLangParser.ELSE)
                self.state = 103
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SLangParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(SLangParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SLangParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(SLangParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(SLangParser.BlockContext,0)


        def getRuleIndex(self):
            return SLangParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = SLangParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(SLangParser.WHILE)
            self.state = 107
            self.match(SLangParser.LPAREN)
            self.state = 108
            self.expression()
            self.state = 109
            self.match(SLangParser.RPAREN)
            self.state = 110
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(SLangParser.FOR, 0)

        def IDENTIFIER(self):
            return self.getToken(SLangParser.IDENTIFIER, 0)

        def IN(self):
            return self.getToken(SLangParser.IN, 0)

        def expression(self):
            return self.getTypedRuleContext(SLangParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(SLangParser.BlockContext,0)


        def getRuleIndex(self):
            return SLangParser.RULE_forLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForLoop" ):
                listener.enterForLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForLoop" ):
                listener.exitForLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForLoop" ):
                return visitor.visitForLoop(self)
            else:
                return visitor.visitChildren(self)




    def forLoop(self):

        localctx = SLangParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(SLangParser.FOR)
            self.state = 113
            self.match(SLangParser.IDENTIFIER)
            self.state = 114
            self.match(SLangParser.IN)
            self.state = 115
            self.expression()
            self.state = 116
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SLangParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)




    def expressionStatement(self):

        localctx = SLangParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditionalExpression(self):
            return self.getTypedRuleContext(SLangParser.ConditionalExpressionContext,0)


        def getRuleIndex(self):
            return SLangParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = SLangParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.conditionalExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOrExpression(self):
            return self.getTypedRuleContext(SLangParser.LogicalOrExpressionContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SLangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SLangParser.ExpressionContext,i)


        def getRuleIndex(self):
            return SLangParser.RULE_conditionalExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionalExpression" ):
                listener.enterConditionalExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionalExpression" ):
                listener.exitConditionalExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionalExpression" ):
                return visitor.visitConditionalExpression(self)
            else:
                return visitor.visitChildren(self)




    def conditionalExpression(self):

        localctx = SLangParser.ConditionalExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_conditionalExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.logicalOrExpression()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 123
                self.match(SLangParser.T__0)
                self.state = 124
                self.expression()
                self.state = 125
                self.match(SLangParser.T__1)
                self.state = 126
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAndExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SLangParser.LogicalAndExpressionContext)
            else:
                return self.getTypedRuleContext(SLangParser.LogicalAndExpressionContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(SLangParser.OR)
            else:
                return self.getToken(SLangParser.OR, i)

        def getRuleIndex(self):
            return SLangParser.RULE_logicalOrExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOrExpression" ):
                listener.enterLogicalOrExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOrExpression" ):
                listener.exitLogicalOrExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalOrExpression" ):
                return visitor.visitLogicalOrExpression(self)
            else:
                return visitor.visitChildren(self)




    def logicalOrExpression(self):

        localctx = SLangParser.LogicalOrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_logicalOrExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.logicalAndExpression()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 131
                self.match(SLangParser.OR)
                self.state = 132
                self.logicalAndExpression()
